--- a/tpl/default/css/login.css
+++ b/tpl/default/css/login.css
@@ -1,7 +1,23 @@
 /*
- * Styles specific to the login page
+ * Styles specific to the loginform page
  */
 
-#login label {
-	display:none;
+#loginform {
+	width:25%;
+	min-width:250px;
+	margin: 0 auto;
+}
+#loginform h1 {
+	text-align:center;
+	margin-bottom:2rem;
+}
+
+#loginform input[type="text"],
+#loginform input[type="password"],
+#loginform input[type="submit"] {
+	width:100%;
+}
+
+.switch {
+	
 }
