Style for feed list and articles head
@tmos Sometimes I didn't know where to put my rules, so feel free to move it.
And in some places naming convention is foo-bar while in some others it is fooBar.

--- a/tpl/default/css/articles.css
+++ b/tpl/default/css/articles.css
@@ -6,10 +6,20 @@ main article {
 	border: 1px solid #E5E5E5;
 	border-radius: 2px;
 	background-color: #FFF;
-	padding:1rem;
 }
 
-.articles-button-bar {
-	float: right;
+main article > h1 {
+	font-size: 1.6em;
+	padding: 0 1rem;
 }
+
+.article-content {
+	padding: 1rem;
+}
+
+.article-button-bar {
+	float: right;
+	margin: 0;
+}
+
 
