--- a/tpl/default/css/layout.css
+++ b/tpl/default/css/layout.css
@@ -24,6 +24,29 @@
 		margin: 2rem 0;
 	}
 
+/* == Responsive */
+	/*big screens*/
+	@media(min-width:960px)
+	{
+		main article {
+			display:flex;
+		}
+		.articleControls {
+			flex:1;
+			text-align:left
+		}
+		.articleContent {
+			flex:3;
+		}
+	}
+	/*phones*/
+	@media(max-width:700px)
+	{
+		#flex,
+		body main article {
+			display:block;
+		}
+	}
 /* == Tools */
 	.clear {
 		clear:both;
