tags are usable by the users :)

--- a/tpl/default/css/sidebar.css
+++ b/tpl/default/css/sidebar.css
@@ -12,6 +12,7 @@ aside header h1 a {
 	display:block;
 }
 
+/*
 #feedList li a {
 	display: block;
 	background-color: #ccc;
@@ -30,3 +31,4 @@ aside header h1 a {
 	background-color: #888;
 	color: white;
 }
+*/
