--- a/tpl/default/css/sidebar.css
+++ b/tpl/default/css/sidebar.css
@@ -1,6 +1,10 @@
 /*
  * Style for the sidebar
  */
+ .Side {
+ 	margin: 0 .5rem;
+ }
+
 .Logo-h1 {
 	margin:0;
 	text-align:center;
@@ -21,4 +25,9 @@
 .Menu-li{
 	display: inline-block;
 	padding:.5rem;
+}
+
+.Side-tagList .DelTag{
+	/*this cascade can be considered not really as BEM css, but I can't figure how to do this without cascade…*/
+	display: none;
 }
