--- a/tpl/default/css/articles.css
+++ b/tpl/default/css/articles.css
@@ -3,12 +3,12 @@
  */
 
 /* == article html tag */
-	main .Article {
+	.Article {
 		border: 1px solid #E5E5E5;
 		border-radius: 2px;
 		background-color: #FEFEFE;
 	}
-	main .Article > * {
+	.Article > * {
 		padding:0;
 	}
 
