--- a/tpl/default/css/ui.css
+++ b/tpl/default/css/ui.css
@@ -7,7 +7,7 @@
 		height:35px;
 		border: 0 none;
 		padding:0 1rem;
-		margin:.5rem;
+		margin:.5rem 0;
 		text-align:center;
 		font-weight:bold;
 		cursor:pointer;
@@ -123,7 +123,7 @@
 		margin: 0.5rem;
 		cursor: pointer;
 	}
-	.Switch:empty ~ label:before, 
+	.Switch:empty ~ label:before,
 	.Switch:empty ~ label:after
 	{
 		position: absolute;
