--- a/tpl/default/css/articles.css
+++ b/tpl/default/css/articles.css
@@ -75,3 +75,6 @@
 		max-width: 100% !important;
 		height: auto !important;
 	}
+    .ArticleContent iframe {
+        max-width: 100% !important;
+    }
