Improve general Settings appearance
 * Have text input grey background
 * Avoid bad anchor offset when clicking on tabs
 * Add style for hints
 * Clean up Add feed entry
 * Add autofocus

--- a/tpl/default/css/settings.css
+++ b/tpl/default/css/settings.css
@@ -79,6 +79,9 @@
 	.TabContent > .TabContent-h2 {
 		margin-top: 0;
 	}
+	.TabContent-anchor {
+		position: fixed;
+	}
 
 	.SettingsSection {
 		border-top: 1px dashed #E8E8E8;
