--- a/tpl/default/css/style.css
+++ b/tpl/default/css/style.css
@@ -2,6 +2,7 @@
 @import "layout.css";
 @import "ui.css";
 @import "modal.css";
+@import "toggle.css";
 
 @import "sidebar.css";
 @import "articles.css";
