--- a/tpl/default/css/articles.css
+++ b/tpl/default/css/articles.css
@@ -8,6 +8,9 @@
 		border-radius: 2px;
 		background-color: #FEFEFE;
 	}
+		.Article.read {
+			border: 3px solid #DDD;
+		}
 
 /* == article <nav>*/
 	.Controls {
