--- a/tpl/default/css/articles.css
+++ b/tpl/default/css/articles.css
@@ -11,6 +11,10 @@
 		.Article.read {
 			border: 3px solid #DDD;
 		}
+		.Article.system {
+			padding: 1rem;
+			color: #888;
+		}
 
 /* == article <nav>*/
 	.Controls {
