--- a/tpl/default/css/articles.css
+++ b/tpl/default/css/articles.css
@@ -72,6 +72,9 @@
 		padding-left:2em;
 		padding-right:2em;
 	}
+	.ArticleContent li {
+		list-style-type: disc;
+	}
 	.ArticleContent > * {
 		padding:0 2rem 1rem 2rem;
 	}
