--- a/tpl/default/css/modal.css
+++ b/tpl/default/css/modal.css
@@ -49,6 +49,9 @@
 	border-radius: 0 0 2px 2px;
 	width: 100%;
 }
+.Modalbox-close {
+	cursor: pointer;
+}
 /* ==darkbackground */
 .Overlay {
 	display: none;
