--- a/tpl/zen/main.css
+++ b/tpl/zen/main.css
@@ -69,7 +69,7 @@ input::-moz-focus-inner {
     background: none;
     border: none;
     cursor: pointer;
-    margin: 2em auto;
+    margin: 2rem auto;
     padding: 0;
     
     width: 2.5rem;
@@ -83,16 +83,15 @@ input::-moz-focus-inner {
 }
 
 .vertical-nav--arrow {
-    width: 2rem;
-    height: 2rem;
-    margin: 0.25rem 0;
-    padding: 0;
+    height: 2.1rem;
+    margin: 0;
+    padding: 0.2rem 0;
     position: absolute;
     right: 0;
 }
 
 .vertical-nav--arrow:first-child {
-    margin: 1.85em 0;
+    margin: 2rem 0;
 }
 
 
