--- a/tpl/zen/main.css
+++ b/tpl/zen/main.css
@@ -102,7 +102,7 @@ input::-moz-focus-inner {
 }
 
 .horizontal-nav--item {
-    display: block;
+    display: inline-block;
     background: none;
     border: none;
     cursor: pointer;
